Update: responsify the sidebar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,10 +26,35 @@ html, body {
 }
 
 /*
+ * Open button
+ */
+ .openbutton {
+ 	position: fixed;
+ 	top: 0;
+ 	left: 0;
+ 	z-index: 2;
+ }
+
+ .openbutton__hidden {
+ 	z-index: -1;
+ }
+
+/*
+ * Close button
+ */
+
+ .closebutton {
+
+ }
+
+/*
  * Sidebar
  */
+
+/*Off screen by default*/
 .sidebar {
 	z-index: 1;
+	opacity: .7;
 	position: fixed;
 	left:-300px;
 	top:0;
@@ -40,11 +65,8 @@ html, body {
 	display: flex; /*etc?*/
 }
 
-/*cursor: pointer;*/
-
-/*sidebar:hover*/
-
-.sidebar__open{
+/*Translate to open*/
+.sidebar__open {
 	/*left:0;*/
 	opacity: .45;
 	transform: translateX(300px);
@@ -59,27 +81,57 @@ html, body {
 	transition: all 500ms ease;
 }
 
-/* Create a CSS arrow */
-/*http://www.sitepoint.com/css3-sliding-menu/*/
-.sidebar:after
-{
-	position: absolute;
-	content: ' ';
-	width: 0;
-	height: 0;
-	top: 50%;
-	border-width: 30px 12px;
-	border-style: solid;
-	border-color: transparent transparent transparent black;
-}
+/*Content*/
 .sidebar-content {
 	width: 290px;
 	padding-left: 10px;
 }
 
+/*Sidebar "edge"; hidden completely on mobile. */
 .sidebar-edge {
-	width: 30px;
-	padding: 10px;
+	display: none;
 }
 
+/*If not mobile*/
+@media screen and (min-width: 500px) {
+
+	/*Show sidebar-edge.*/
+	.sidebar-edge {
+		display: block;
+		width: 30px;
+		padding: 10px;
+	}
+
+	/* Create a CSS arrow on sidebar edge */
+	/*http://www.sitepoint.com/css3-sliding-menu/*/
+	.sidebar:after
+	{
+		position: absolute;
+		content: ' ';
+		width: 0;
+		height: 0;
+		top: 50%;
+		border-width: 30px 12px;
+		border-style: solid;
+		border-color: transparent transparent transparent black;
+	}
+
+	/*Hide open button*/
+	.openbutton {
+		display: none;
+	}
+
+	/*Hide close button*/
+	.closebutton{
+		display: none;
+	}
+}
+
+/*
+ * InfoWindows
+ */
+.infowindow {
+ color:red;
+ left:50px;
+}
 
