--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,14 @@
+/*
+ *
+ * Default is mobile
+ *
+ */
+
 html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto', sans-serif;
 }
 
 img {
@@ -9,10 +16,10 @@ img {
 }
 
 /*
- * Active place/restaurant
+ * Active place/restaurant <li>
  */
 .active {
-	color: red;
+	border: 2px solid white;
 }
 
 /*
@@ -44,19 +51,12 @@ img {
  }
 
 /*
- * Close button
- */
-
- .closebutton {
-
- }
-
-/*
  * Sidebar
  */
 
 /*Off screen by default*/
 .sidebar {
+	padding-right: 5px;
 	z-index: 1;
 	opacity: .7;
 	position: fixed;
@@ -67,17 +67,20 @@ img {
 	height: 100%;
 	color: white;
 	display: flex; /*etc?*/
+    overflow-y: scroll;
+
+    /*font-family: 'Roboto', sans-serif;*/
 }
 
 /*Translate to open*/
 .sidebar__open {
 	/*left:0;*/
-	opacity: ..8;
+	/*opacity: .8;*/
 	transform: translateX(300px);
 }
 
-/* Smooth animation */
-.sidebar, .sidebar:after{
+/* Smooth animations */
+.sidebar, .sidebar:after, .location {
 	-webkit-transition: all 500ms ease;
 	-moz-transition: all 500ms ease;
 	-ms-transition: all 500ms ease;
@@ -88,13 +91,92 @@ img {
 /*Content*/
 .sidebar-content {
 	width: 290px;
-	padding-left: 10px;
+	/*padding-left: 10px;*/
+}
+
+.location {
+	z-index: 1;
+	position: fixed;
+	width: 60%;
+	left: 20%;
+	text-align: center;
+	/*font-size: 1.5em;*/
+	font-weight: bold;
+	padding-top: 5px;
+}
+
+.location__hidden {
+	visibility: hidden;
+	opacity: 0;
+}
+
+.filter {
+    padding-top: 16px;
+    text-align: center;
+}
+
+.filter-rating {
+	padding-top: 10px;
+}
+
+#filter-text-input {
+    width: 90%;
+    font-size: 1em;
+}
+
+#location-search-text-autocomplete {
+	width: 90%;
+	font-size: 1em;
+    border: solid 1px #707070;
+    box-shadow: 0 0 5px 1px #969696;
+}
+
+/*Places list*/
+#places-list {
+	list-style-type: none;
+	overflow-x: auto;
+	padding-left: 5px;
+    padding-top: 5px;
+    text-align: center;
+}
+
+/*Places list items*/
+.places-list-item {
+	padding: 15px;
+	cursor: pointer;
+}
+
+/*Name/Title*/
+.places-list-item-name {
+	font-size: 1.3em;
+    font-weight: bold;
+}
+
+/*Address*/
+.places-list-item-address {
+
+}
+
+/*Rating image*/
+#places-list-item-phone {
+
+}
+
+/*highlight on hover*/
+.places-list-item:hover {
+	color:black;
+	background: white;
 }
 
 /*Sidebar "edge"; hidden completely on mobile. */
 .sidebar-edge {
 	display: none;
 }
+
+/*Close button*/
+ .closebutton {
+
+ }
 
 /*If not mobile*/
 @media screen and (min-width: 500px) {
@@ -111,13 +193,19 @@ img {
 	.sidebar:after
 	{
 		position: absolute;
+		z-index: 1;
 		content: ' ';
 		width: 0;
 		height: 0;
 		top: 50%;
+		right: -10px;
 		border-width: 30px 12px;
 		border-style: solid;
-		border-color: transparent transparent transparent black;
+		border-color: transparent transparent transparent white;
+	}
+
+	.sidebar__open:after {
+		opacity: 0;
 	}
 
 	/*Hide open button*/
@@ -136,6 +224,5 @@ img {
  */
 .infowindow {
  color:red;
- left:50px;
 }
 
