--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,18 +36,31 @@ img {
 	z-index: 0;
 }
 
+/* Factor our button properties*/
+.button {
+	z-index: 2;
+    font-size: 1em;
+    border-radius: 5px;
+    padding: 6px;
+    min-width: 70px;
+    background-color: white;
+    box-shadow: 1px 1px 1px #1B1A1A;
+    border: 1px solid #969494;
+}
+
 /*
  * Open button
  */
  .openbutton {
  	position: fixed;
- 	top: 0;
- 	left: 0;
- 	z-index: 2;
+	bottom: 15px;
+    left: 15px;
  }
 
  .openbutton__hidden {
- 	z-index: -1;
+ 	/*z-index: -1;*/
+ 	opacity: 0;
+ 	visibility: hidden;
  }
 
 /*
@@ -80,7 +93,7 @@ img {
 }
 
 /* Smooth animations */
-.sidebar, .sidebar:after, .location {
+.sidebar, .sidebar:after, .location, .openbutton {
 	-webkit-transition: all 500ms ease;
 	-moz-transition: all 500ms ease;
 	-ms-transition: all 500ms ease;
@@ -97,11 +110,10 @@ img {
 .location {
 	z-index: 1;
 	position: fixed;
+	top: 10px;
 	width: 60%;
 	left: 20%;
 	text-align: center;
-	/*font-size: 1.5em;*/
-	font-weight: bold;
 	padding-top: 5px;
 }
 
@@ -125,8 +137,7 @@ img {
 }
 
 #location-search-text-autocomplete {
-	width: 90%;
-	font-size: 1em;
+	font-size: 1.3em;
     border: solid 1px #707070;
     box-shadow: 0 0 5px 1px #969696;
 }
@@ -175,7 +186,9 @@ img {
 
 /*Close button*/
  .closebutton {
-
+ 	position: relative;
+    bottom: 15px;
+    left: 15px;
  }
 
 /*If not mobile*/
@@ -216,6 +229,11 @@ img {
 	/*Hide close button*/
 	.closebutton{
 		display: none;
+	}
+
+	/*Shift the search bar up slightly*/
+	.location {
+		top: 0px;
 	}
 }
 
