--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,6 +90,7 @@ img {
     background-color: white;
     box-shadow: 1px 1px 1px #1B1A1A;
     border: 1px solid #969494;
+    margin-top: 10px;
 }
 
 /*
@@ -156,8 +157,8 @@ img {
 	z-index: 1;
 	position: fixed;
 	top: 10px;
-	width: 60%;
-	left: 20%;
+	width: 80%;
+	left: 10%;
 	text-align: center;
 	padding-top: 5px;
 }
@@ -280,6 +281,8 @@ img {
 	/*Shift the search bar up slightly*/
 	.location {
 		top: 0px;
+		left: 20%;
+		width: 60%;
 	}
 }
 
@@ -327,13 +330,3 @@ img {
 .infowindow-details-ratings span {
 	vertical-align: top;
 }
-
-
-
-
-
-
-
-
-
-
