--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,8 @@
  *
  */
 
-html, body {
+html,
+body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -76,7 +77,10 @@ img {
 /*
  * Smooth all animations
  */
-.sidebar, .sidebar:after, .location, .openbutton {
+.sidebar,
+.sidebar:after,
+.location,
+.openbutton {
 	-webkit-transition: all 500ms ease;
 	-moz-transition: all 500ms ease;
 	-ms-transition: all 500ms ease;
