--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,7 +41,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-
 /*
  *
  * Default is mobile
@@ -375,7 +374,6 @@ img {
 /*Keep details in remaining space*/
 .infowindow-details {
 	width: 150px;
-	height: 100px;
 	text-align: center;
 }
 
@@ -405,6 +403,7 @@ img {
 /*Format*/
 .infowindow-snippet {
 	margin-bottom: 0;
+	margin-top: 5px;
 }
 
 
