--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,20 @@ img {
 }
 
 /*
+ * Smooth all animations
+ */
+.sidebar,
+.sidebar:after,
+.location,
+.openbutton {
+   -webkit-transition: all 500ms ease;
+   -moz-transition: all 500ms ease;
+   -ms-transition: all 500ms ease;
+   -o-transition: all 500ms ease;
+   transition: all 500ms ease;
+}
+
+/*
  * Buttons
  */
 
